Remo reveal knowledge

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <div class="knowledge__box">
             <section class="knowledge" id="cursos">
                 <div class="knowledge__container container">
-                    <div class="knowledge__texts reveal-left">
+                    <div class="knowledge__texts ">
                         <h2 class="subtitle">Curso completo de Acrílicas ¡Domina las técnicas de uñas en acrílico!</h2>
                         <p class="knowledge__paragraph">En este curso te llevaré paso a paso por el arte de la creación de uñas en acrílico.
                             Aprenderás a dominar la mejor técnica de construcción que utilice y fui desarrollando a lo largo de 10 años.
@@ -138,11 +138,11 @@
                         </p>
                     </div>
 
-                    <figure class="knowledge__picture acrilicas reveal-left">
+                    <figure class="knowledge__picture acrilicas ">
                     </figure>
 
                     <!--Boton ACRILICAS-->
-                    <div class="boton-modal boton-modal--acrilicas reveal-right">
+                    <div class="boton-modal boton-modal--acrilicas ">
                         <label for="btn-modal--acrilicas">
                             Más info
                         </label>
@@ -193,7 +193,7 @@
 
             <section class="knowledge">
                 <div class="knowledge__container container">
-                    <div class="knowledge__texts reveal-left">
+                    <div class="knowledge__texts ">
                         <h2 class="subtitle">Curso completo de Polygel ¡Domina las técnicas de uñas en polygel!</h2>
                         <p class="knowledge__paragraph">En este curso aprenderás a dominar el polygel. <br>
                             Llevando a cabo  construcciones con moldes y capsulas, con una terminación de esmaltado. <br>
@@ -202,11 +202,11 @@
                         </p>
                     </div>
 
-                    <figure class="knowledge__picture polygel reveal-left">
+                    <figure class="knowledge__picture polygel ">
                     </figure>
 
                     <!--Boton POLYGEL-->
-                    <div class="boton-modal boton-modal--polygel reveal-right">
+                    <div class="boton-modal boton-modal--polygel ">
                         <label for="btn-modal--polygel">
                             Más info
                         </label>
@@ -254,17 +254,17 @@
             <!-- SOFTGEL-->
             <section class="knowledge">
                 <div class="knowledge__container container">
-                    <div class="knowledge__texts reveal-left">
+                    <div class="knowledge__texts ">
                         <h2 class="subtitle">Curso completo de Esmaltado semi permanente, kapping gel y kapping en polygel</h2>
                         <p class="knowledge__paragraph">En este curso aprenderás la construcción de uñas soft gel, llevando a cabo una técnica fácil, rápida y con un método exclusivo, fácil y duradera.
                             </p>
                     </div>
 
-                    <figure class="knowledge__picture softgel reveal-left">
+                    <figure class="knowledge__picture softgel ">
                     </figure>
 
                     <!--Boton PESTAÑAS-->
-                    <div class="boton-modal boton-modal--softgel reveal-right">
+                    <div class="boton-modal boton-modal--softgel">
                         <label for="btn-modal--softgel">
                             Más info
                         </label>
@@ -316,17 +316,17 @@
 
             <section class="knowledge">
                 <div class="knowledge__container container">
-                    <div class="knowledge__texts reveal-left">
+                    <div class="knowledge__texts ">
                         <h2 class="subtitle">Curso completo de Esmaltado semi permanente, kapping gel y kapping en polygel</h2>
                         <p class="knowledge__paragraph">En este curso aprenderás todo lo necesario para realizar un buen esmaltado semi permanente + técnica de kapping gel y kapping en polygel.
                             </p>
                     </div>
 
-                    <figure class="knowledge__picture semipermanente reveal-left">
+                    <figure class="knowledge__picture semipermanente ">
                     </figure>
 
                     <!--Boton PESTAÑAS-->
-                    <div class="boton-modal boton-modal--semipermanente reveal-right">
+                    <div class="boton-modal boton-modal--semipermanente ">
                         <label for="btn-modal--semipermanente">
                             Más info
                         </label>
@@ -380,18 +380,18 @@
 
             <section class="knowledge">
                 <div class="knowledge__container container">
-                    <div class="knowledge__texts reveal-left">
+                    <div class="knowledge__texts ">
                         <h2 class="subtitle">Curso completo de Pestañas pelo por pelo</h2>
                         <p class="knowledge__paragraph">En este curso aprenderás a colocar pestañas pelo por pelo, llevando a cabo cada paso hasta llegar al resultado final. <br>
                             Aprenderás el uso de cada herramienta, los tiempos, el lavado de pestañas, la forma de colocación y secado…
                             </p>
                     </div>
 
-                    <figure class="knowledge__picture peloxpelo reveal-left">
+                    <figure class="knowledge__picture peloxpelo ">
                     </figure>
 
                     <!--Boton PESTAÑAS-->
-                    <div class="boton-modal boton-modal--pestanas reveal-right">
+                    <div class="boton-modal boton-modal--pestanas ">
                         <label for="btn-modal--pestanas">
                             Más info
                         </label>
@@ -433,16 +433,16 @@
 
             <section class="knowledge">
                 <div class="knowledge__container container ">
-                    <div class="knowledge__texts reveal-left">
+                    <div class="knowledge__texts ">
                         <h2 class="subtitle">Curso completo de Pestañas Volumen ruso</h2>
                         <p class="knowledge__paragraph">En este curso aprenderás a crear pestañas de volumen ruso del 2D al  6D</p>
                     </div>
 
-                    <figure class="knowledge__picture volumenruso reveal-left">
+                    <figure class="knowledge__picture volumenruso ">
                     </figure>
 
                     <!--Boton PESTAÑAS VOLUMEN-->
-                    <div class="boton-modal boton-modal--volumen reveal-right">
+                    <div class="boton-modal boton-modal--volumen ">
                         <label for="btn-modal--volumen">
                             Más info
                         </label>
@@ -492,17 +492,17 @@
 
             <section class="knowledge">
                 <div class="knowledge__container container ">
-                    <div class="knowledge__texts reveal-left">
+                    <div class="knowledge__texts ">
                         <h2 class="subtitle">Curso lifting y permanente con tintura de pestañas y cejas + perfilado de cejas</h2>
                         <p class="knowledge__paragraph">En este curso aprenderás el arte del lifting y perfilado de cejas. Llevando a cabo cada paso hasta llegar al resultado final. <br>
                             </p>
                     </div>
 
-                    <figure class="knowledge__picture lifting reveal-left">
+                    <figure class="knowledge__picture lifting ">
                     </figure>
 
                     <!--Boton PESTAÑAS LIFTING-->
-                    <div class="boton-modal boton-modal--lifting reveal-right">
+                    <div class="boton-modal boton-modal--lifting ">
                         <label for="btn-modal--lifting">
                             Más info
                         </label>
