Cambio de titulo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curso Nails</title>
+    <title>Cursos Cony</title>
     <script src="js/scrollreveal.js"></script>
     <link href="your-project-dir/icon-font/lineicons.css" rel="stylesheet" />
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
@@ -852,7 +852,6 @@
 
         <section class="footer__copy container">
             <h3 class="footer__copyright">Derechos reservados 2023 &copy; Constanza Ciro</h3>
-            <p>Diseñado por Matias Posadas</p>
         </section>
     </footer>
 
