--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                Costo total: $4500 ($1000 para inscribirse y reservar vacante y $3500 a abonar el día de cursada).<br>
+                                Costo total: $5.000 ($1.500 para inscribirse y reservar vacante y $3.500 a abonar el día de cursada).<br>
                                 <br>
                                 📝Sólo con inscripción previa 💅🏻🎓<br>
                                 <br>
@@ -363,7 +363,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                Costo total: $4000 ($1000 para inscribirse y reservar vacante y $3000 a abonar el día de cursada).<br>
+                                Costo total: $4.500 ($1.500 para inscribirse y reservar vacante y $3.500 a abonar el día de cursada).<br>
                                 <br>
                                 📝Sólo con inscripción previa 💅🏻🎓<br>
                                 <br>
@@ -419,7 +419,7 @@
                             👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨ <br>
                             <br>
                             <br>
-                            🎓👉🏻Costo 👁️✨ $4.000 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) </p> <br>
+                            🎓👉🏻Costo 👁️✨ $4.500 💕📝 (Inscripción de $1.500 y los restantes $3.500 a abonar el día de la cursada) </p> <br>
                             📝Sólo con inscripción previa 💅🏻🎓
                             <div class="btn-cerrar btn-cerrar--pestanas">
                                 <label for="btn-modal--pestanas">Cerrar</label>
@@ -475,7 +475,7 @@
                                 👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                                 
                                 <br>
-                                🎓👉🏻Costo 👁️✨ $4.000 💕📝 (Inscripción de $1000 y los restantes $2500 a abonar el día de la cursada) <br>
+                                🎓👉🏻Costo 👁️✨ $5.500 💕📝 (Inscripción de $1.500 y los restantes $3.500 a abonar el día de la cursada) <br>
                                 <br>
                                 💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                                 <br>
@@ -532,7 +532,7 @@
                                 👉🏻 Materiales para trabajar en clase 👁️💆‍♀️<br>
                                 👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                                 <br>
-                                🎓👉🏻Costo 👁️💆‍♀️ $4.000 💕📝 (Inscripción de $1000 y los restantes $3000 a abonar el día de la cursada) <br>
+                                🎓👉🏻Costo 👁️💆‍♀️ $5.000 💕📝 (Inscripción de $1.500 y los restantes $3.500 a abonar el día de la cursada) <br>
                                 <br>
                                 💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                                 <br>
@@ -593,7 +593,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name">Manicura integral completo</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>17.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>19.000</h3>
                     <div class="price__items">
                         <p class="price__features">Uñas gelificadas y esculpidas en acrílico.</p>
                         <p class="price__features">Esmaltado semi permanente, kapping gel y kapping en polygel.</p>
@@ -619,7 +619,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name">Semi permanente, kapping gel y kapping en polygel.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>4.500</h3>
                     <div class="price__items">
                         <p class="price__features">Esmaltado kapping gel</p>
                         <p class="price__features">Encapsuladas</p>
@@ -631,7 +631,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name">Soft gel más decoración con pedreria</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
                     <div class="price__items">
                         <p class="price__features">Colocación de tips</p>
                         <p class="price__features">Esmaltado</p>
@@ -643,7 +643,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-right">
                     <p class="price__name">Pestañas pelo por pelo.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>4.500</h3>
                     <div class="price__items">
                         <p class="price__features">Técnica clásica</p>
                         <p class="price__features">Iniciación en extensiones</p>
@@ -655,7 +655,7 @@
                 <div class="price__element reveal-left">
                     <p class="price__name">Lifting y permanente con tintura de pestañas y cejas más perfilado de cejas.
                     </p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
                     <div class="price__items">
                         <p class="price__features">Autopráctica</p>
                         <p class="price__features">Incluye certificado</p>
@@ -666,13 +666,13 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name"> CURSO INTEGRAL PESTAÑAS</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>10.500</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>12.000</h3>
                     <div class="price__items">
                         <p class="price__features">Extensiones de pestañas pelo por pelo</p>
                         <p class="price__features">Extensiones volumen ruso de 2D al 6D</p>
-                        <p class="price__features">Lifting y permanente</p>
-                        <p class="price__features">Tintura de cejas y pestañas</p>
-                        <p class="price__features">Perfilado de cejas</p>
+                        <p class="price__features">Lifting y permanente con <br> tintura de cejas y pestañas</p>
+                        <p class="price__features"></p>
+                        <p class="price__features"></p>
                         <p class="price__features">Incluye certificado</p>
                     </div>
                     <a href="https://walink.co/75a3a5" class="price__cta" target="_blank" Rel=»Noopener Noreferrer>inscríbete aquí</a>
@@ -680,7 +680,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name">PESTAÑAS VOLUMEN RUSO.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>4.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
                     <div class="price__items">
                         <p class="price__features">Abanicos del 2D al 6D</p>
                         <p class="price__features">Diseño segun el tipo de ojo</p>
