--- a/index.html
+++ b/index.html
@@ -14,24 +14,25 @@
     <meta name="theme-color" content="#2091F9">
     <!-- fontawesome-->
     <script src="https://kit.fontawesome.com/e096e48514.js" crossorigin="anonymous"></script>
-    <title>Matias Frontend</title>
 
 <meta name="title" content="Cursos de Manicuria DESDE CERO">
 <meta name="description" content="Entra a este curso y domina todos las formas de realizar manicuria desde cero.">
 
 
 <meta property="og:type" content="website">
-<!-- <meta property="og:url" content="https://metatags.io/"> -->
+<meta property="og:url" content="https://www.cursoscony.com/">
 <meta property="og:title" content="Cursos de Manicuria DESDE CERO">
-<meta property="og:description" content="Entra a este curso y domina todos las formas de realizar manicuria desde cero.">
-<!-- <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
-
+<meta property="og:description" content="Cursos de uñas y pestañas.">
+<meta property="og:image" content="https://cursoscony.com/images/imagemeta">
+<meta property="og:image:width" content="300" />
+<meta property="og:image:height" content="300" />
+<meta property="og:site_name" content="Cursos Cony" />
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<!-- <meta property="twitter:url" content="https://metatags.io/"> -->
+<meta property="twitter:url" content="https://www.cursoscony.com">
 <meta property="twitter:title" content="Cursos de Manicuria DESDE CERO">
 <meta property="twitter:description" content="Entra a este curso y domina todos las formas de realizar manicuria desde cero.">
-<!-- <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"> -->
+<meta property="twitter:image" content="https://cursoscony.com/images/imagemeta">
 </head>
 <body>
 
