--- a/index.html
+++ b/index.html
@@ -127,6 +127,23 @@
                 </article>
             </div>
         </section>
+
+        <section class="container" id="certificado">
+            <div class="certificado__container">
+                <div class="certificado__info">
+                    <h2>certificado con valor internacional </h2>
+                    <h3>Cursando el curso integral tenes acceso a cursar el examen final en el cual te brindaremos un certificado con valor internacional.</h3>
+                    <div class="niveles">
+                        <p class="nivel">Certificado nivel 1</p>
+                        <p class="nivel">Certificado nivel 2</p>
+                    </div>
+                </div>
+                <div class="certificado__img">
+                    <img src="images/LOGO EFIB.png" alt="">
+                </div>
+            </div>
+        </section>
+
         <div class="knowledge__box">
             <section class="knowledge" id="cursos">
                 <div class="knowledge__container container">
