--- a/index.html
+++ b/index.html
@@ -131,15 +131,18 @@
         <section class="container" id="certificado">
             <div class="certificado__container">
                 <div class="certificado__info">
+                    <div class="medalla">
+                        <img src="images/medalla.png" alt="">
+                    </div>
                     <h2>certificado con valor internacional </h2>
-                    <h3>Cursando el curso integral tenes acceso a cursar el examen final en el cual te brindaremos un certificado con valor internacional.</h3>
+                    <h3>Concluyendo del completo integral de uñas tenés la <span class="resaltado-">opción</span> de acceder a la opción con <span class="resaltado-">certificado</span> internacional.</h3>
                     <div class="niveles">
-                        <p class="nivel">Certificado nivel 1</p>
-                        <p class="nivel">Certificado nivel 2</p>
+                        <!-- <p class="nivel">Certificado standard:Incluye carga horaria de cursada y QR. </p> -->
+                        <p class="nivel">CERTIFICADO COMPLETO: Incluye Registro de matrícula único de PROFESIONAL, Credencial profesional, Carga horaria de cursada y QR.</p>
                     </div>
                 </div>
                 <div class="certificado__img">
-                    <img src="images/LOGO EFIB.png" alt="">
+                    <img src="images/EFIB.png" alt="">
                 </div>
             </div>
         </section>
@@ -824,6 +827,41 @@
                             <i class="fa-solid fa-angle-right"></i>Soft gel y polygel <br>
                             <i class="fa-solid fa-angle-right"></i>Uñas esculpidas y encapsuladas en polygel<br>
                             <i class="fa-solid fa-angle-right"></i>Gelificadas y esculpidas en acrílico. <br>
+                            </p>
+                    </div>
+                </article>
+
+                <article class="questions__padding reveal-right">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Los certificados EFIB tienen valor internacional?
+                            <span class="questions__arrow">
+                                <img src="images/arrow.svg"  class="questions__img" alt="">
+                            </span>
+                        </h3>
+                        <p class="questions__show">El certificado EFIB tiene valor internacional, se obtiene de manera opcional cursando el integral completo de uñas.
+                            </p>
+                    </div>
+                </article>
+
+                <article class="questions__padding reveal-left">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿En qué países tiene validez el certificado EFIB?
+                            <span class="questions__arrow">
+                                <img src="images/arrow.svg"  class="questions__img" alt="">
+                            </span>
+                        </h3>
+                        <p class="questions__show">Los certificados EFIB tiene validez en los siguientes países. <br>
+                            <i class="fa-solid fa-angle-right"></i>Argentina<br>
+                            <i class="fa-solid fa-angle-right"></i>Venezuela<br>
+                            <i class="fa-solid fa-angle-right"></i>Perú<br>
+                            <i class="fa-solid fa-angle-right"></i>Colombia<br>
+                            <i class="fa-solid fa-angle-right"></i>Brasil<br>
+                            <i class="fa-solid fa-angle-right"></i>Ecuador<br>
+                            <i class="fa-solid fa-angle-right"></i>Bolivia<br>
+                            <i class="fa-solid fa-angle-right"></i>Uruguay<br>
+                            <i class="fa-solid fa-angle-right"></i>México<br>
+                            <i class="fa-solid fa-angle-right"></i>Paraguay<br>
+                            <i class="fa-solid fa-angle-right"></i>Chile<br>
                             </p>
                     </div>
                 </article>
