Ajuste de precio Polygel

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                Costo total: $5.000 ($1500 para inscribirse y reservar vacante y $3500 a abonar el día de cursada). <br>
+                                Costo total: $5.500 ($1500 para inscribirse y reservar vacante y $3500 a abonar el día de cursada). <br>
                                 📝Sólo con inscripción previa 💅🏻🎓
                                 </p>
                             <div class="btn-cerrar btn-cerrar--polygel">
@@ -318,7 +318,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                Costo total: $5.000 ($1.500 para inscribirse y reservar vacante y $3.500 a abonar el día de cursada).<br>
+                                Costo total: $5.500 ($2.000 para inscribirse y reservar vacante y $3.500 a abonar el día de cursada).<br>
                                 <br>
                                 📝Sólo con inscripción previa 💅🏻🎓<br>
                                 <br>
@@ -627,8 +627,8 @@
                 </div>
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-right">
-                    <p class="price__name">Manicura en Esculpidas y encapsuladas en polygel.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
+                    <p class="price__name">Esculpidas y encapsuladas en polygel.</p>
+                    <h3 class="plan__price"><span class="price__signo">$</span>5.500</h3>
                     <div class="price__items">
                         <p class="price__features">Aplicación desde cero</p>
                         <p class="price__features">Encapsuladas</p>
