--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                <b>Valor total: $8.000</b> ($3.500 para inscribirse y reservar vacante y $4.500 a abonar el día de cursada).<br>
+                                <b>Valor total: $9.000</b> ($4.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
                                 <br>
                                 📝<b>Sólo con inscripción previa</b> 💅🏻🎓<br>
                                 </p><br>
@@ -312,7 +312,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                <b>Costo total: $6.000</b> ($2.500 para inscribirse y reservar vacante y $3.500 a abonar el día de cursada).<br>
+                                <b>Costo total: $7.000</b> ($3.000 para inscribirse y reservar vacante y $4.000 a abonar el día de cursada).<br>
                                 <br>
                                 📝<b>Sólo con inscripción previa</b> 💅🏻🎓<br>
                             </p>
@@ -364,7 +364,7 @@
                             👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨ <br>
                             <br>
                             <br>
-                            🎓👉🏻<b>>Valor 👁️✨ $4.500</b>💕📝(Inscripción de $1.500 y los restantes $3.000 a abonar el día de la cursada) </p> <br>
+                            🎓👉🏻<b>>Valor 👁️✨ $5.000</b>💕📝(Inscripción de $2.000 y los restantes $3.000 a abonar el día de la cursada) </p> <br>
                             📝Sólo con inscripción previa 💅🏻🎓
                             <div class="btn-cerrar btn-cerrar--pestanas">
                                 <label for="btn-modal--pestanas">Cerrar</label>
@@ -396,7 +396,7 @@
                     <input type="checkbox" id="btn-modal--volumen">
                     <div class="container-modal--volumen">
                         <div class="content-modal content-modal--volumen">
-                            <h2>Extensiones de pestañas voluntan ruso del 2D al 3D
+                            <h2>Extensiones de pestañas volumen ruso del 2D al 3D
                             </h2>
                             <p>💕🎓Jornada de 3hs aproximadamente <br>
 
@@ -419,7 +419,7 @@
                                 👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                                 
                                 <br>
-                                🎓👉🏻<b>Valor 👁️✨ $4.500</b> 💕📝 (Inscripción de $1.500 y los restantes $3.000 a abonar el día de la cursada) <br>
+                                🎓👉🏻<b>Valor 👁️✨ $5.000</b> 💕📝 (Inscripción de $2.000 y los restantes $3.000 a abonar el día de la cursada) <br>
                                 <br>
                                 💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                                 <br>
@@ -474,7 +474,7 @@
                                 👉🏻 Materiales para trabajar en clase 👁️💆‍♀️<br>
                                 👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                                 <br>
-                                🎓👉🏻<b>Valor 👁️💆‍♀️ $5.000</b> 💕📝 (Inscripción de $1.500 y los restantes $3.500 a abonar el día de la cursada) <br>
+                                🎓👉🏻<b>Valor 👁️💆‍♀️ $6.000</b> 💕📝 (Inscripción de $2.500 y los restantes $3.500 a abonar el día de la cursada) <br>
                                 <br>
                                 💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                                 <br>
@@ -533,7 +533,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left integral">
                     <p class="price__name">Manicura integral completo</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span><del>23.000</del> <br>20.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span><del>25.000</del> <br>22.000</h3>
                     <div class="price__items">
                         <p class="price__features">Curso presencial uñas acrílicas (base tips y esculpidas) + semi permanente, kapping gel y polygel.</p>
                         <p class="price__features">Curso presencial uñas soft gel, esculpidas, soft y encapsuladas en polygel.</p>
@@ -545,7 +545,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-right">
                     <p class="price__name">Curso presencial uñas soft gel, esculpidas, soft y encapsuladas en polygel</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>8.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>9.000</h3>
                     <div class="price__items">
                         <p class="price__features">Incluye materiales para trabajar en clase </p>
                         <p class="price__features">Incluye certificado</p>
@@ -555,7 +555,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name">Curso presencial decoraciones integrales</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>6.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>7.000</h3>
                     <div class="price__items">
                         <p class="price__features">Incluye materiales para trabajar en clase </p>
                         <p class="price__features">Incluye certificado</p>
@@ -565,7 +565,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-right pestañas" >
                     <p class="price__name">Pestañas pelo por pelo.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>4.500</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
                     <div class="price__items">
                         <p class="price__features">Técnica clásica</p>
                         <p class="price__features">Iniciación en extensiones</p>
@@ -579,7 +579,7 @@
                 <div class="price__element reveal-left pestañas">
                     <p class="price__name">Lifting y permanente con tintura de pestañas y cejas más perfilado de cejas.
                     </p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>6.000</h3>
                     <div class="price__items">
                         <p class="price__features">Incluye certificado</p>
                         <p class="price__features">Incluye materiales para trabajar en clase </p>
@@ -590,7 +590,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left integral">
                     <p class="price__name"> CURSO INTEGRAL PESTAÑAS</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span><del>15.000</del> <br>12.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span><del>16.000</del> <br>14.000</h3>
                     <div class="price__items">
                         <p class="price__features">Extensiones de pestañas pelo por pelo</p>
                         <p class="price__features">Extensiones volumen ruso de 2D al 6D</p>
@@ -602,7 +602,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left pestañas">
                     <p class="price__name">PESTAÑAS VOLUMEN RUSO.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>4.500</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
                     <div class="price__items">
                         <p class="price__features">Abanicos del 2D al 6D</p>
                         <p class="price__features">Diseño segun el tipo de ojo</p>
