--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <input type="checkbox" id="btn-modal--acrilicas">
                     <div class="container-modal--acrilicas">
                         <div class="content-modal content-modal--acrilicas">
-                            <h2>UÑAS ACRILICAS 123</h2>
+                            <h2>UÑAS ACRILICAS</h2>
                             <p>📅🕛Jornada: 7hs <br>
                                 <br>
                                 💅🏻🖌️Algunos temas a trabajar: <br>
