--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                <b>Costo total: $9.000</b> ($4.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
+                                <b>Valor total: $9.000</b> ($4.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
                                 <br>
                                 <b>📝Sólo con inscripción previa 💅🏻🎓<br></b>
                             <div class="btn-cerrar btn-cerrar--acrilicas">
@@ -312,7 +312,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                <b>Costo total: $7.000</b> ($3.000 para inscribirse y reservar vacante y $4.000 a abonar el día de cursada).<br>
+                                <b>Valor total: $7.000</b> ($3.000 para inscribirse y reservar vacante y $4.000 a abonar el día de cursada).<br>
                                 <br>
                                 📝<b>Sólo con inscripción previa</b> 💅🏻🎓<br>
                             </p>
