--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta property="og:url" content="https://www.cursoscony.com/">
 <meta property="og:title" content="Cursos de Manicuria DESDE CERO">
 <meta property="og:description" content="Cursos de uñas y pestañas.">
-<meta property="og:image" content="https://cursoscony.com/images/imagemeta">
+<meta property="og:image" content="https://cursoscony.com/images/imagemeta.jpg">
 <meta property="og:image:width" content="300" />
 <meta property="og:image:height" content="300" />
 <meta property="og:site_name" content="Cursos Cony" />
@@ -32,7 +32,7 @@
 <meta property="twitter:url" content="https://www.cursoscony.com">
 <meta property="twitter:title" content="Cursos de Manicuria DESDE CERO">
 <meta property="twitter:description" content="Entra a este curso y domina todos las formas de realizar manicuria desde cero.">
-<meta property="twitter:image" content="https://cursoscony.com/images/imagemeta">
+<meta property="twitter:image" content="https://cursoscony.com/images/imagemeta.jpg">
 </head>
 <body>
 
@@ -198,7 +198,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                <b>Valor total: $9.000</b> ($4.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
+                                <b>Valor total: $15.000</b> ($10.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
                                 <br>
                                 <b>📝Sólo con inscripción previa 💅🏻🎓<br></b>
                             <div class="btn-cerrar btn-cerrar--acrilicas">
@@ -257,7 +257,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                <b>Valor total: $9.000</b> ($4.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
+                                <b>Valor total: $15.000</b> ($7.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
                                 <br>
                                 📝<b>Sólo con inscripción previa</b> 💅🏻🎓<br>
                                 </p><br>
@@ -312,7 +312,7 @@
                                 <br>
                                 👉🏻 Certificado de asistencia incluido 🎓📃<br>
                                 <br>
-                                <b>Valor total: $7.000</b> ($3.000 para inscribirse y reservar vacante y $4.000 a abonar el día de cursada).<br>
+                                <b>Valor total: $12.000</b> ($7.000 para inscribirse y reservar vacante y $5.000 a abonar el día de cursada).<br>
                                 <br>
                                 📝<b>Sólo con inscripción previa</b> 💅🏻🎓<br>
                             </p>
@@ -364,7 +364,7 @@
                             👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨ <br>
                             <br>
                             <br>
-                            🎓👉🏻<b>>Valor 👁️✨ $5.000</b>💕📝(Inscripción de $2.000 y los restantes $3.000 a abonar el día de la cursada) </p> <br>
+                            🎓👉🏻<b>>Valor 👁️✨ $10.000</b>💕📝(Inscripción de $7.000 y los restantes $3.000 a abonar el día de la cursada) </p> <br>
                             📝Sólo con inscripción previa 💅🏻🎓
                             <div class="btn-cerrar btn-cerrar--pestanas">
                                 <label for="btn-modal--pestanas">Cerrar</label>
@@ -418,7 +418,7 @@
                                 👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                                 
                                 <br>
-                                🎓👉🏻<b>Valor 👁️✨ $5.000</b> 💕📝 (Inscripción de $2.000 y los restantes $3.000 a abonar el día de la cursada) <br>
+                                🎓👉🏻<b>Valor 👁️✨ $10.000</b> 💕📝 (Inscripción de $7.000 y los restantes $3.000 a abonar el día de la cursada) <br>
                                 <br>
                                 💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                                 <br>
@@ -473,7 +473,7 @@
                                 👉🏻 Materiales para trabajar en clase 👁️💆‍♀️<br>
                                 👉🏻 Te llevas apuntes impresos y guías escritas completas con el paso a paso visto en toda la cursada + lista de materiales detallada👁️✨<br>
                                 <br>
-                                🎓👉🏻<b>Valor 👁️💆‍♀️ $6.000</b> 💕📝 (Inscripción de $2.500 y los restantes $3.500 a abonar el día de la cursada) <br>
+                                🎓👉🏻<b>Valor 👁️💆‍♀️ $13.000</b> 💕📝 (Inscripción de $9.000 y los restantes $4.000 a abonar el día de la cursada) <br>
                                 <br>
                                 💳💰Aceptamos  MercadoPago💸. Sin cargo adicional con tranferencia<br>
                                 <br>
@@ -522,7 +522,7 @@
             <div class="price__table ">
                 <div class="price__element reveal-left">
                     <p class="price__name">CURSO PRESENCIAL UÑAS ACRÍLICAS (BASE TIPS Y ESCULPIDAS) + SEMI PERMANENTE, KAPPING GEL Y POLYGEL</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>9.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>15.000</h3>
                     <div class="price__items">
                         <p class="price__features">Incluye materiales para trabajar en clase </p>
                         <p class="price__features">Incluye certificado</p>
@@ -532,7 +532,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left integral">
                     <p class="price__name">Manicura integral completo</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span><del>25.000</del> <br>22.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span><del>42.000</del> <br>35.000</h3>
                     <div class="price__items">
                         <p class="price__features">Curso presencial uñas acrílicas (base tips y esculpidas) + semi permanente, kapping gel y polygel.</p>
                         <p class="price__features">Curso presencial uñas soft gel, esculpidas, soft y encapsuladas en polygel.</p>
@@ -544,7 +544,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-right">
                     <p class="price__name">Curso presencial uñas soft gel, esculpidas, soft y encapsuladas en polygel</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>9.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>15.000</h3>
                     <div class="price__items">
                         <p class="price__features">Incluye materiales para trabajar en clase </p>
                         <p class="price__features">Incluye certificado</p>
@@ -554,7 +554,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left">
                     <p class="price__name">Curso presencial decoraciones integrales</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>7.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>12.000</h3>
                     <div class="price__items">
                         <p class="price__features">Incluye materiales para trabajar en clase </p>
                         <p class="price__features">Incluye certificado</p>
@@ -564,7 +564,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-right pestañas" >
                     <p class="price__name">Pestañas pelo por pelo.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>10.000</h3>
                     <div class="price__items">
                         <p class="price__features">Técnica clásica</p>
                         <p class="price__features">Iniciación en extensiones</p>
@@ -578,7 +578,7 @@
                 <div class="price__element reveal-left pestañas">
                     <p class="price__name">Lifting y permanente con tintura de pestañas y cejas más perfilado de cejas.
                     </p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>6.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>13.000</h3>
                     <div class="price__items">
                         <p class="price__features">Incluye certificado</p>
                         <p class="price__features">Incluye materiales para trabajar en clase </p>
@@ -589,7 +589,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left integral">
                     <p class="price__name"> CURSO INTEGRAL PESTAÑAS</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span><del>16.000</del> <br>14.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span><del>33.000</del> <br>28.000</h3>
                     <div class="price__items">
                         <p class="price__features">Extensiones de pestañas pelo por pelo</p>
                         <p class="price__features">Extensiones volumen ruso de 2D al 6D</p>
@@ -601,7 +601,7 @@
                 <!-- SEPARADOR-->
                 <div class="price__element reveal-left pestañas">
                     <p class="price__name">PESTAÑAS VOLUMEN RUSO.</p>
-                    <h3 class="plan__price"><span class="price__signo">$</span>5.000</h3>
+                    <h3 class="plan__price"><span class="price__signo">$</span>10.000</h3>
                     <div class="price__items">
                         <p class="price__features">Abanicos del 2D al 6D</p>
                         <p class="price__features">Diseño segun el tipo de ojo</p>
